# meen-612-ur5e-sim-project

./: .gitignore  README.md  drake_controller_wrapper.py  make_plots.py  my_controller.py  run_simulator.py  visualize_urdf.py
meen612rtde/c++/: CMakeLists.txt  howdy_client.cpp  meen612driver.cpp  test_J6_rotation.cpp
meen612rtde/c++/resources/: rtde_output_recipe.txt
meen612rtde/old_py_rtde/: example_control_loop.py  plot.py  record_configuration.xml  test.py
meen612rtde/python/: ZmqCppSynch.py  drake_controller_wrapper.py  make_plots.py  meen612_ID.py  meen612_control.py  meen612_robot_sim.py  my_controller.py  plot_robot_data.py  run_simulator.py
meen612rtde/python/ur_description/: README.md
meen612rtde/python/version1_data_format/: plot_robot_data.py
ur_description/: README.md  package.xml
ur_description/urdf/: ur5e.urdf
